<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPreviousMonth"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:minWidth="110dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextMonth"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:minWidth="110dp"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <FrameLayout
        android:id="@+id/viewPagerContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/pager_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDate">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/categoryViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:id="@+id/textBudgetLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:gravity="start"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/viewPagerContainer" />

    <TextView
        android:id="@+id/textBudgetValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="$0"
        android:gravity="start"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPagerContainer" />

    <TextView
        android:id="@+id/textRemainingLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/remaining"
        android:gravity="start"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/textBudgetLabel" />

    <TextView
        android:id="@+id/textRemainingValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="$0"
        android:gravity="start"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textBudgetLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expensesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRemainingLabel"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

